parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BOOLEAN
    BREAK
    CLASS
    COMA
    COMILLASIMPLE
    CORCHETE_A
    CORCHETE_C
    DIFERENTE
    DIVISION
    ELSE
    ESPACIO
    EXCEPT
    FLOAT
    IGUAL
    IMPORT
    LLAVE_A
    LLAVE_C
    MASMAS
    MATHSQRT
    MAYORIGUAL
    MENORIGUAL
    MENORQUE
    MENOSMENOS
    MULTIPLICACION
    NEXT
    NOT
    OR
    POW
    PUNTO
    PUNTOCOMA
    SELF
    STR
    TRY

Grammar

Rule 0     S' -> ASIGNAR
Rule 1     ASIGNAR -> ID ASIGNACION NUMERO
Rule 2     ASIGNAR -> ID ASIGNACION NUMERO ASIGNAR
Rule 3     ASIGNAR -> ID ASIGNACION NUMERO DEFINIR
Rule 4     DEFINIR -> DEF ID PARENTESIS_A PARENTESIS_C DOSPUNTOS WHILES
Rule 5     WHILES -> WHILE ID DOSPUNTOS ASIGNARVV
Rule 6     ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID ID ID ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT
Rule 7     CASTEOINT -> ID ASIGNACION INT PARENTESIS_A ID PARENTESIS_C RETORNAR
Rule 8     RETORNAR -> RETURN ID INVOCAR
Rule 9     INVOCAR -> ID ASIGNACION ID PARENTESIS_A PARENTESIS_C CONDICIONAL
Rule 10    CONDICIONAL -> IF ID MAYORQUE NUMERO DOSPUNTOS IMPRIMIR
Rule 11    CONDICIONAL -> IF ID ASIGNACION ASIGNACION NUMERO DOSPUNTOS IMPRIMIR
Rule 12    IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C CONDICIONAL
Rule 13    IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C ASIGNAR2
Rule 14    ASIGNAR2 -> ID ASIGNACION ID RESTA NUMERO CICLO1
Rule 15    CICLO1 -> FOR ID IN RANGE PARENTESIS_A ID PARENTESIS_C DOSPUNTOS SUMAVAR
Rule 16    SUMAVAR -> ID ASIGNACION ID SUMA ID IMPRIMIRVAR
Rule 17    IMPRIMIRVAR -> PRINT PARENTESIS_A ID PARENTESIS_C
Rule 18    IMPRIMIRVAR -> PRINT PARENTESIS_A ID PARENTESIS_C ASIGNAR
Rule 19    ASIGNAR -> ID ASIGNACION ID
Rule 20    ASIGNAR -> ID ASIGNACION ID ASIGNAR

Terminals, with rules where they appear

AND                  : 
ASIGNACION           : 1 2 3 6 7 9 11 11 14 16 19 20
BOOLEAN              : 
BREAK                : 
CLASS                : 
COMA                 : 
COMILLADOBLE         : 6 6 12 12 13 13
COMILLASIMPLE        : 
CORCHETE_A           : 
CORCHETE_C           : 
DEF                  : 4
DIFERENTE            : 
DIVISION             : 
DOSPUNTOS            : 4 5 6 10 11 15
ELSE                 : 
ESPACIO              : 
EXCEPT               : 
FLOAT                : 
FOR                  : 15
ID                   : 1 2 3 4 5 6 6 6 6 6 6 7 7 8 9 9 10 11 14 14 15 15 16 16 16 17 18 19 19 20 20
IF                   : 10 11
IGUAL                : 
IMPORT               : 
IN                   : 15
INPUT                : 6
INT                  : 7
LLAVE_A              : 
LLAVE_C              : 
MASMAS               : 
MATHSQRT             : 
MAYORIGUAL           : 
MAYORQUE             : 10
MENORIGUAL           : 
MENORQUE             : 
MENOSMENOS           : 
MULTIPLICACION       : 
NEXT                 : 
NOT                  : 
NUMERO               : 1 2 3 10 11 12 13 14
OR                   : 
PARENTESIS_A         : 4 6 7 9 12 13 15 17 18
PARENTESIS_C         : 4 6 7 9 12 13 15 17 18
POW                  : 
PRINT                : 12 13 17 18
PUNTO                : 
PUNTOCOMA            : 
RANGE                : 15
RESTA                : 14
RETURN               : 8
SELF                 : 
STR                  : 
SUMA                 : 16
TRY                  : 
WHILE                : 5
error                : 

Nonterminals, with rules where they appear

ASIGNAR              : 2 18 20 0
ASIGNAR2             : 13
ASIGNARVV            : 5
CASTEOINT            : 6
CICLO1               : 14
CONDICIONAL          : 9 12
DEFINIR              : 3
IMPRIMIR             : 10 11
IMPRIMIRVAR          : 16
INVOCAR              : 8
RETORNAR             : 7
SUMAVAR              : 15
WHILES               : 4

Parsing method: LALR

state 0

    (0) S' -> . ASIGNAR
    (1) ASIGNAR -> . ID ASIGNACION NUMERO
    (2) ASIGNAR -> . ID ASIGNACION NUMERO ASIGNAR
    (3) ASIGNAR -> . ID ASIGNACION NUMERO DEFINIR
    (19) ASIGNAR -> . ID ASIGNACION ID
    (20) ASIGNAR -> . ID ASIGNACION ID ASIGNAR

    ID              shift and go to state 2

    ASIGNAR                        shift and go to state 1

state 1

    (0) S' -> ASIGNAR .



state 2

    (1) ASIGNAR -> ID . ASIGNACION NUMERO
    (2) ASIGNAR -> ID . ASIGNACION NUMERO ASIGNAR
    (3) ASIGNAR -> ID . ASIGNACION NUMERO DEFINIR
    (19) ASIGNAR -> ID . ASIGNACION ID
    (20) ASIGNAR -> ID . ASIGNACION ID ASIGNAR

    ASIGNACION      shift and go to state 3


state 3

    (1) ASIGNAR -> ID ASIGNACION . NUMERO
    (2) ASIGNAR -> ID ASIGNACION . NUMERO ASIGNAR
    (3) ASIGNAR -> ID ASIGNACION . NUMERO DEFINIR
    (19) ASIGNAR -> ID ASIGNACION . ID
    (20) ASIGNAR -> ID ASIGNACION . ID ASIGNAR

    NUMERO          shift and go to state 5
    ID              shift and go to state 4


state 4

    (19) ASIGNAR -> ID ASIGNACION ID .
    (20) ASIGNAR -> ID ASIGNACION ID . ASIGNAR
    (1) ASIGNAR -> . ID ASIGNACION NUMERO
    (2) ASIGNAR -> . ID ASIGNACION NUMERO ASIGNAR
    (3) ASIGNAR -> . ID ASIGNACION NUMERO DEFINIR
    (19) ASIGNAR -> . ID ASIGNACION ID
    (20) ASIGNAR -> . ID ASIGNACION ID ASIGNAR

    $end            reduce using rule 19 (ASIGNAR -> ID ASIGNACION ID .)
    ID              shift and go to state 2

    ASIGNAR                        shift and go to state 6

state 5

    (1) ASIGNAR -> ID ASIGNACION NUMERO .
    (2) ASIGNAR -> ID ASIGNACION NUMERO . ASIGNAR
    (3) ASIGNAR -> ID ASIGNACION NUMERO . DEFINIR
    (1) ASIGNAR -> . ID ASIGNACION NUMERO
    (2) ASIGNAR -> . ID ASIGNACION NUMERO ASIGNAR
    (3) ASIGNAR -> . ID ASIGNACION NUMERO DEFINIR
    (19) ASIGNAR -> . ID ASIGNACION ID
    (20) ASIGNAR -> . ID ASIGNACION ID ASIGNAR
    (4) DEFINIR -> . DEF ID PARENTESIS_A PARENTESIS_C DOSPUNTOS WHILES

    $end            reduce using rule 1 (ASIGNAR -> ID ASIGNACION NUMERO .)
    ID              shift and go to state 2
    DEF             shift and go to state 9

    ASIGNAR                        shift and go to state 7
    DEFINIR                        shift and go to state 8

state 6

    (20) ASIGNAR -> ID ASIGNACION ID ASIGNAR .

    $end            reduce using rule 20 (ASIGNAR -> ID ASIGNACION ID ASIGNAR .)


state 7

    (2) ASIGNAR -> ID ASIGNACION NUMERO ASIGNAR .

    $end            reduce using rule 2 (ASIGNAR -> ID ASIGNACION NUMERO ASIGNAR .)


state 8

    (3) ASIGNAR -> ID ASIGNACION NUMERO DEFINIR .

    $end            reduce using rule 3 (ASIGNAR -> ID ASIGNACION NUMERO DEFINIR .)


state 9

    (4) DEFINIR -> DEF . ID PARENTESIS_A PARENTESIS_C DOSPUNTOS WHILES

    ID              shift and go to state 10


state 10

    (4) DEFINIR -> DEF ID . PARENTESIS_A PARENTESIS_C DOSPUNTOS WHILES

    PARENTESIS_A    shift and go to state 11


state 11

    (4) DEFINIR -> DEF ID PARENTESIS_A . PARENTESIS_C DOSPUNTOS WHILES

    PARENTESIS_C    shift and go to state 12


state 12

    (4) DEFINIR -> DEF ID PARENTESIS_A PARENTESIS_C . DOSPUNTOS WHILES

    DOSPUNTOS       shift and go to state 13


state 13

    (4) DEFINIR -> DEF ID PARENTESIS_A PARENTESIS_C DOSPUNTOS . WHILES
    (5) WHILES -> . WHILE ID DOSPUNTOS ASIGNARVV

    WHILE           shift and go to state 15

    WHILES                         shift and go to state 14

state 14

    (4) DEFINIR -> DEF ID PARENTESIS_A PARENTESIS_C DOSPUNTOS WHILES .

    $end            reduce using rule 4 (DEFINIR -> DEF ID PARENTESIS_A PARENTESIS_C DOSPUNTOS WHILES .)


state 15

    (5) WHILES -> WHILE . ID DOSPUNTOS ASIGNARVV

    ID              shift and go to state 16


state 16

    (5) WHILES -> WHILE ID . DOSPUNTOS ASIGNARVV

    DOSPUNTOS       shift and go to state 17


state 17

    (5) WHILES -> WHILE ID DOSPUNTOS . ASIGNARVV
    (6) ASIGNARVV -> . ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID ID ID ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT

    ID              shift and go to state 18

    ASIGNARVV                      shift and go to state 19

state 18

    (6) ASIGNARVV -> ID . ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID ID ID ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT

    ASIGNACION      shift and go to state 20


state 19

    (5) WHILES -> WHILE ID DOSPUNTOS ASIGNARVV .

    $end            reduce using rule 5 (WHILES -> WHILE ID DOSPUNTOS ASIGNARVV .)


state 20

    (6) ASIGNARVV -> ID ASIGNACION . INPUT PARENTESIS_A COMILLADOBLE ID ID ID ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT

    INPUT           shift and go to state 21


state 21

    (6) ASIGNARVV -> ID ASIGNACION INPUT . PARENTESIS_A COMILLADOBLE ID ID ID ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT

    PARENTESIS_A    shift and go to state 22


state 22

    (6) ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A . COMILLADOBLE ID ID ID ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT

    COMILLADOBLE    shift and go to state 23


state 23

    (6) ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE . ID ID ID ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT

    ID              shift and go to state 24


state 24

    (6) ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID . ID ID ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT

    ID              shift and go to state 25


state 25

    (6) ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID ID . ID ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT

    ID              shift and go to state 26


state 26

    (6) ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID ID ID . ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT

    ID              shift and go to state 27


state 27

    (6) ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID ID ID ID . ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT

    ID              shift and go to state 28


state 28

    (6) ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID ID ID ID ID . DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT

    DOSPUNTOS       shift and go to state 29


state 29

    (6) ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID ID ID ID ID DOSPUNTOS . COMILLADOBLE PARENTESIS_C CASTEOINT

    COMILLADOBLE    shift and go to state 30


state 30

    (6) ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID ID ID ID ID DOSPUNTOS COMILLADOBLE . PARENTESIS_C CASTEOINT

    PARENTESIS_C    shift and go to state 31


state 31

    (6) ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID ID ID ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C . CASTEOINT
    (7) CASTEOINT -> . ID ASIGNACION INT PARENTESIS_A ID PARENTESIS_C RETORNAR

    ID              shift and go to state 32

    CASTEOINT                      shift and go to state 33

state 32

    (7) CASTEOINT -> ID . ASIGNACION INT PARENTESIS_A ID PARENTESIS_C RETORNAR

    ASIGNACION      shift and go to state 34


state 33

    (6) ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID ID ID ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT .

    $end            reduce using rule 6 (ASIGNARVV -> ID ASIGNACION INPUT PARENTESIS_A COMILLADOBLE ID ID ID ID ID DOSPUNTOS COMILLADOBLE PARENTESIS_C CASTEOINT .)


state 34

    (7) CASTEOINT -> ID ASIGNACION . INT PARENTESIS_A ID PARENTESIS_C RETORNAR

    INT             shift and go to state 35


state 35

    (7) CASTEOINT -> ID ASIGNACION INT . PARENTESIS_A ID PARENTESIS_C RETORNAR

    PARENTESIS_A    shift and go to state 36


state 36

    (7) CASTEOINT -> ID ASIGNACION INT PARENTESIS_A . ID PARENTESIS_C RETORNAR

    ID              shift and go to state 37


state 37

    (7) CASTEOINT -> ID ASIGNACION INT PARENTESIS_A ID . PARENTESIS_C RETORNAR

    PARENTESIS_C    shift and go to state 38


state 38

    (7) CASTEOINT -> ID ASIGNACION INT PARENTESIS_A ID PARENTESIS_C . RETORNAR
    (8) RETORNAR -> . RETURN ID INVOCAR

    RETURN          shift and go to state 40

    RETORNAR                       shift and go to state 39

state 39

    (7) CASTEOINT -> ID ASIGNACION INT PARENTESIS_A ID PARENTESIS_C RETORNAR .

    $end            reduce using rule 7 (CASTEOINT -> ID ASIGNACION INT PARENTESIS_A ID PARENTESIS_C RETORNAR .)


state 40

    (8) RETORNAR -> RETURN . ID INVOCAR

    ID              shift and go to state 41


state 41

    (8) RETORNAR -> RETURN ID . INVOCAR
    (9) INVOCAR -> . ID ASIGNACION ID PARENTESIS_A PARENTESIS_C CONDICIONAL

    ID              shift and go to state 42

    INVOCAR                        shift and go to state 43

state 42

    (9) INVOCAR -> ID . ASIGNACION ID PARENTESIS_A PARENTESIS_C CONDICIONAL

    ASIGNACION      shift and go to state 44


state 43

    (8) RETORNAR -> RETURN ID INVOCAR .

    $end            reduce using rule 8 (RETORNAR -> RETURN ID INVOCAR .)


state 44

    (9) INVOCAR -> ID ASIGNACION . ID PARENTESIS_A PARENTESIS_C CONDICIONAL

    ID              shift and go to state 45


state 45

    (9) INVOCAR -> ID ASIGNACION ID . PARENTESIS_A PARENTESIS_C CONDICIONAL

    PARENTESIS_A    shift and go to state 46


state 46

    (9) INVOCAR -> ID ASIGNACION ID PARENTESIS_A . PARENTESIS_C CONDICIONAL

    PARENTESIS_C    shift and go to state 47


state 47

    (9) INVOCAR -> ID ASIGNACION ID PARENTESIS_A PARENTESIS_C . CONDICIONAL
    (10) CONDICIONAL -> . IF ID MAYORQUE NUMERO DOSPUNTOS IMPRIMIR
    (11) CONDICIONAL -> . IF ID ASIGNACION ASIGNACION NUMERO DOSPUNTOS IMPRIMIR

    IF              shift and go to state 49

    CONDICIONAL                    shift and go to state 48

state 48

    (9) INVOCAR -> ID ASIGNACION ID PARENTESIS_A PARENTESIS_C CONDICIONAL .

    $end            reduce using rule 9 (INVOCAR -> ID ASIGNACION ID PARENTESIS_A PARENTESIS_C CONDICIONAL .)


state 49

    (10) CONDICIONAL -> IF . ID MAYORQUE NUMERO DOSPUNTOS IMPRIMIR
    (11) CONDICIONAL -> IF . ID ASIGNACION ASIGNACION NUMERO DOSPUNTOS IMPRIMIR

    ID              shift and go to state 50


state 50

    (10) CONDICIONAL -> IF ID . MAYORQUE NUMERO DOSPUNTOS IMPRIMIR
    (11) CONDICIONAL -> IF ID . ASIGNACION ASIGNACION NUMERO DOSPUNTOS IMPRIMIR

    MAYORQUE        shift and go to state 51
    ASIGNACION      shift and go to state 52


state 51

    (10) CONDICIONAL -> IF ID MAYORQUE . NUMERO DOSPUNTOS IMPRIMIR

    NUMERO          shift and go to state 53


state 52

    (11) CONDICIONAL -> IF ID ASIGNACION . ASIGNACION NUMERO DOSPUNTOS IMPRIMIR

    ASIGNACION      shift and go to state 54


state 53

    (10) CONDICIONAL -> IF ID MAYORQUE NUMERO . DOSPUNTOS IMPRIMIR

    DOSPUNTOS       shift and go to state 55


state 54

    (11) CONDICIONAL -> IF ID ASIGNACION ASIGNACION . NUMERO DOSPUNTOS IMPRIMIR

    NUMERO          shift and go to state 56


state 55

    (10) CONDICIONAL -> IF ID MAYORQUE NUMERO DOSPUNTOS . IMPRIMIR
    (12) IMPRIMIR -> . PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C CONDICIONAL
    (13) IMPRIMIR -> . PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C ASIGNAR2

    PRINT           shift and go to state 58

    IMPRIMIR                       shift and go to state 57

state 56

    (11) CONDICIONAL -> IF ID ASIGNACION ASIGNACION NUMERO . DOSPUNTOS IMPRIMIR

    DOSPUNTOS       shift and go to state 59


state 57

    (10) CONDICIONAL -> IF ID MAYORQUE NUMERO DOSPUNTOS IMPRIMIR .

    $end            reduce using rule 10 (CONDICIONAL -> IF ID MAYORQUE NUMERO DOSPUNTOS IMPRIMIR .)


state 58

    (12) IMPRIMIR -> PRINT . PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C CONDICIONAL
    (13) IMPRIMIR -> PRINT . PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C ASIGNAR2

    PARENTESIS_A    shift and go to state 60


state 59

    (11) CONDICIONAL -> IF ID ASIGNACION ASIGNACION NUMERO DOSPUNTOS . IMPRIMIR
    (12) IMPRIMIR -> . PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C CONDICIONAL
    (13) IMPRIMIR -> . PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C ASIGNAR2

    PRINT           shift and go to state 58

    IMPRIMIR                       shift and go to state 61

state 60

    (12) IMPRIMIR -> PRINT PARENTESIS_A . COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C CONDICIONAL
    (13) IMPRIMIR -> PRINT PARENTESIS_A . COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C ASIGNAR2

    COMILLADOBLE    shift and go to state 62


state 61

    (11) CONDICIONAL -> IF ID ASIGNACION ASIGNACION NUMERO DOSPUNTOS IMPRIMIR .

    $end            reduce using rule 11 (CONDICIONAL -> IF ID ASIGNACION ASIGNACION NUMERO DOSPUNTOS IMPRIMIR .)


state 62

    (12) IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE . NUMERO COMILLADOBLE PARENTESIS_C CONDICIONAL
    (13) IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE . NUMERO COMILLADOBLE PARENTESIS_C ASIGNAR2

    NUMERO          shift and go to state 63


state 63

    (12) IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE NUMERO . COMILLADOBLE PARENTESIS_C CONDICIONAL
    (13) IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE NUMERO . COMILLADOBLE PARENTESIS_C ASIGNAR2

    COMILLADOBLE    shift and go to state 64


state 64

    (12) IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE . PARENTESIS_C CONDICIONAL
    (13) IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE . PARENTESIS_C ASIGNAR2

    PARENTESIS_C    shift and go to state 65


state 65

    (12) IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C . CONDICIONAL
    (13) IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C . ASIGNAR2
    (10) CONDICIONAL -> . IF ID MAYORQUE NUMERO DOSPUNTOS IMPRIMIR
    (11) CONDICIONAL -> . IF ID ASIGNACION ASIGNACION NUMERO DOSPUNTOS IMPRIMIR
    (14) ASIGNAR2 -> . ID ASIGNACION ID RESTA NUMERO CICLO1

    IF              shift and go to state 49
    ID              shift and go to state 68

    CONDICIONAL                    shift and go to state 66
    ASIGNAR2                       shift and go to state 67

state 66

    (12) IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C CONDICIONAL .

    $end            reduce using rule 12 (IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C CONDICIONAL .)


state 67

    (13) IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C ASIGNAR2 .

    $end            reduce using rule 13 (IMPRIMIR -> PRINT PARENTESIS_A COMILLADOBLE NUMERO COMILLADOBLE PARENTESIS_C ASIGNAR2 .)


state 68

    (14) ASIGNAR2 -> ID . ASIGNACION ID RESTA NUMERO CICLO1

    ASIGNACION      shift and go to state 69


state 69

    (14) ASIGNAR2 -> ID ASIGNACION . ID RESTA NUMERO CICLO1

    ID              shift and go to state 70


state 70

    (14) ASIGNAR2 -> ID ASIGNACION ID . RESTA NUMERO CICLO1

    RESTA           shift and go to state 71


state 71

    (14) ASIGNAR2 -> ID ASIGNACION ID RESTA . NUMERO CICLO1

    NUMERO          shift and go to state 72


state 72

    (14) ASIGNAR2 -> ID ASIGNACION ID RESTA NUMERO . CICLO1
    (15) CICLO1 -> . FOR ID IN RANGE PARENTESIS_A ID PARENTESIS_C DOSPUNTOS SUMAVAR

    FOR             shift and go to state 74

    CICLO1                         shift and go to state 73

state 73

    (14) ASIGNAR2 -> ID ASIGNACION ID RESTA NUMERO CICLO1 .

    $end            reduce using rule 14 (ASIGNAR2 -> ID ASIGNACION ID RESTA NUMERO CICLO1 .)


state 74

    (15) CICLO1 -> FOR . ID IN RANGE PARENTESIS_A ID PARENTESIS_C DOSPUNTOS SUMAVAR

    ID              shift and go to state 75


state 75

    (15) CICLO1 -> FOR ID . IN RANGE PARENTESIS_A ID PARENTESIS_C DOSPUNTOS SUMAVAR

    IN              shift and go to state 76


state 76

    (15) CICLO1 -> FOR ID IN . RANGE PARENTESIS_A ID PARENTESIS_C DOSPUNTOS SUMAVAR

    RANGE           shift and go to state 77


state 77

    (15) CICLO1 -> FOR ID IN RANGE . PARENTESIS_A ID PARENTESIS_C DOSPUNTOS SUMAVAR

    PARENTESIS_A    shift and go to state 78


state 78

    (15) CICLO1 -> FOR ID IN RANGE PARENTESIS_A . ID PARENTESIS_C DOSPUNTOS SUMAVAR

    ID              shift and go to state 79

